--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-sqlalchemy
-pymongo
-alembic
-fastapi
-uvicorn
-psycopg2-binary
-psycopg2
-python-dotenv
-pytest
+sqlalchemy==2.0.42
+pymongo==4.14.0
+alembic==1.16.4
+fastapi==0.116.1
+uvicorn==0.35.0
+psycopg2-binary==2.9.10
+pytest==8.4.1
+mongoengine==0.29.1
