--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     container_name: "${MONGO_CONTAINER_NAME}"
     restart: always
     ports:
-      - "27017:27017"          
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
@@ -32,17 +32,27 @@ services:
       - backend
 
   transaction-behavior-check:
-    context: ../../
-    build: Dockerfile  
-    container_name: transaction-behavior-check
-    restart: always
-    ports:
-      - "${APPLICATION_PORT}:${APPLICATION_PORT}"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-    networks:
-      - backend
+      build:
+        dockerfile: Dockerfile
+        context: .
+      container_name: transaction-behavior-check
+      restart: always
+      ports:
+        - "${APPLICATION_PORT}:${APPLICATION_PORT}"
+      environment:
+        POSTGRES_USER: ${POSTGRES_USER}
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_DB: ${POSTGRES_DB}
+        POSTGRES_CONTAINER_NAME: ${POSTGRES_CONTAINER_NAME}
+        MONGO_USERNAME: ${MONGO_USERNAME}
+        MONGO_PASSWORD: ${MONGO_PASSWORD}
+        MONGO_CONTAINER_NAME: ${MONGO_CONTAINER_NAME}
+        APPLICATION_PORT: ${APPLICATION_PORT}
+      networks:
+        - backend
+      depends_on:
+        - postgres
+        - mongo
 
 volumes:
   pgdata:
